api-reference/community/v1/error-codes.mdx
---
title: 'Error Codes'
description: 'Reference for all error codes returned by the CoCart API v1, with HTTP status codes and messages.'
icon: xmark
robots: "noindex, follow"
'og:title': 'CoCart API v1 Error Codes'
---

All CoCart errors return a JSON body with three fields:

```json
{
    "code": "cocart_item_not_in_cart",
    "message": "Item specified does not exist in cart.",
    "data": {
        "status": 404
    }
}
```

Where `%s`, `%1$s`, `%2$s` etc. appear in message templates below, they are replaced with dynamic values (product name, quantity, etc.) at runtime.

| HTTP Status | Error Code | Message |
| ----------- | ---------- | ------- |
| 401 | `cocart_cannot_read_cart` | Cannot read cart! |
| 404 | `cocart_customer_missing` | Customer ID is required! |
| 404 | `cocart_cart_key_missing` | Cart Key is required! |
| 404 | `cocart_cart_in_session_not_valid` | Cart in session is not valid! |
| 404 | `cocart_clear_cart_failed` | Clearing the cart failed! |
| 404 | `cocart_product_id_required` | Product ID number is required! |
| 405 | `cocart_product_id_not_numeric` | Product ID must be numeric! |
| 405 | `cocart_quantity_not_numeric` | Quantity must be numeric! |
| 404 | `cocart_product_does_not_exist` | Warning: This product does not exist! |
| 403 | `cocart_product_sold_individually` | You cannot add another `%s` to your cart. (`%s` = product name) |
| 403 | `cocart_cannot_be_purchased` | Sorry, this product cannot be purchased. |
| 404 | `cocart_product_out_of_stock` | You cannot add `%s` to the cart because the product is out of stock. (`%s` = product name) |
| 403 | `cocart_not_enough_in_stock` | You cannot add a quantity of `%1$s` for `%2$s` to the cart because there is not enough stock — only `%3$s` remaining! (`%1$s` = quantity requested, `%2$s` = product name, `%3$s` = stock remaining) |
| 403 | `cocart_not_enough_stock_remaining` | You cannot add that amount to the cart — we have `%1$s` in stock and you already have `%2$s` in your cart. (`%1$s` = stock available, `%2$s` = quantity in cart) |
| 403 | `cocart_not_ok_to_add_item` | This item can not be added to the cart. |
| 403 | `cocart_cannot_add_to_cart` | You cannot add `%s` to your cart. (`%s` = product name) |
| 403 | `cocart_can_not_remove_item` | Unable to remove item from cart. |
| 403 | `cocart_can_not_restore_item` | Unable to restore item to the cart. |
| 403 | `cocart_can_not_update_item` | Unable to update item quantity in cart. |
| 404 | `cocart_cart_item_key_required` | Cart item key is required! |
| 404 | `cocart_no_items` | No items in cart. |
| 404 | `cocart_item_not_in_cart` | Item specified does not exist in cart. |
| 403 | `cocart_cannot_add_product_type_to_cart` | You cannot add `%1$s` to your cart as it is a `%2$s` product. (`%1$s` = product name, `%2$s` = product type) |
| 400 | `cocart_invalid_variation_data` | Invalid value posted for `%1$s`. Allowed values: `%2$s` (`%1$s` = attribute name, `%2$s` = allowed values) |
| 400 | `cocart_missing_variation_data` | Missing variation data for variable product. `%s` is a required field. — or — `%s` are required fields. (`%s` = attribute name) |
| 400 | `cocart_no_variation_found` | No matching variation found. |
| 403 | `cocart_cart_invalid_parent_product` | This product cannot be added to the cart. |
| 404 | `cocart_product_failed_validation` | Product did not pass validation! |
| 403 | `cocart_can_not_increase_quantity` | You can only have 1 `%s` in your cart. (`%s` = product name) |
